Fix featured stall keyword alignment mobile

--- a/components/Criteria.module.css
+++ b/components/Criteria.module.css
@@ -5,8 +5,8 @@
   align-items: center;
   justify-content: flex-start;
 }
-@media screen and (max-width: 750px) {
+/* @media screen and (max-width: 750px) {
   .criteriaContianer {
     justify-content: center;
   }
-}
+} */
